--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -30,8 +30,10 @@
    "outputs": [],
    "source": [
     "# Importing libraries\n",
+    "import re #for regexes\n",
     "import requests\n",
     "import numpy as np\n",
+    "import unicodedata #useful for ex 3\n",
     "import pickle as pk\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -841,125 +843,164 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we try to merge the two frames in a naive manner, but we see that there is almost no overlap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#this is a bad idea\n",
-    "merged_frame = pd.merge(times_frame, \n",
-    "                        merged_top, how='outer', right_on=['title'], left_on=['name'])"
+    "### Naive Merge"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So instead, we check if there is a python library to help us out. And there is! But we should probably ask if we are allowed to use this..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import difflib \n",
+    "We tried to merge the two DataFrames in a naive manner with a simple join, and found that barely any columns matched.\n",
     "\n",
-    "def get_match(element, other):\n",
-    "    #difflib gets the best matching elements and returns a list of possible matches in order of accuracy\n",
-    "    match = difflib.get_close_matches(element, merged_top.title)\n",
-    "    return '' if len(match) == 0 else match[0]"
+    "We also tried to use difflib, a Python library, but it gives us false positives for certain universities. If it gave us false negatives, it wouldn't be a huge problem, but the opposite is one as we don't want any errors in our mergers. \n",
+    "\n",
+    "Hence, we created our own method. The idea behind this is that non-alphanumeric characters in the strings make it so that the strings are not an exact match. It also happens that some university names in one DataFrame are a substring of those in the other.\n",
+    "\n",
+    "For some languages (french and german for example), non-unicode characters (like é and è or ö and ü) impede the matching. Thus, removing all these may increase our matching rate, without giving us any false positives."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "matches = times_frame.name.map(lambda x: get_match(x, merged_top.title))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "times_frame['mergeindex'] = matches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "merged_frame = pd.merge(times_frame, \n",
-    "                        merged_top, how='outer', right_on=['title'], left_on=['mergeindex'])\n",
-    "nulls = merged_frame[merged_frame.isnull().any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "nulls_1 = nulls[nulls['name'].isnull()]\n",
-    "nulls_2 = nulls[nulls['title'].isnull()]\n",
-    "print(nulls_2.name)\n",
-    "print(nulls_1[nulls_1['country'] == 'Germany'].title,\n",
-    "nulls_2[nulls_2['location'] == 'Germany'].name)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(nulls_1[nulls_1['country'] == 'France'].title,\n",
-    "nulls_2[nulls_2['location'] == 'France'].name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(nulls_1[nulls_1['country'] == 'Sweden']['title'],\n",
-    "nulls_2[nulls_2['location'] == 'Sweden']['name'])"
+    "def ascii(s):\n",
+    "    s = re.sub(\"\\W+\", \"\", s)\n",
+    "    s = s.replace(\"at\", '')\n",
+    "    # transforms é with e for example\n",
+    "    return ''.join((c for c in unicodedata.normalize('NFD', s) if unicodedata.category(c) != 'Mn'))\n",
+    "\n",
+    "top_frame.title = top_frame.title.map(str.lower).map(ascii)\n",
+    "times_frame.name = times_frame.name.map(str.lower).map(ascii)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the only improvement possible is combining LMU Munich and Ludwig-Maximilians-Universität München, as this is one row, we just do it manually"
+    "We create a dictionary with the different matches, making sure to fill it from both sides (check if a is in b and if b is in a). As we sometimes have multiple matches, it is best not to do anything right now at the risk of getting false positives."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "university_name = dict()\n",
+    "\n",
+    "for name in times_frame['name']:\n",
+    "    if (top_frame['title'].str.contains(name).any()) \\\n",
+    "    and len(top_frame.title[top_frame['title'].str.contains(name)]) == 1:\n",
+    "        #way to check how many direct matches we have\n",
+    "        university_name[name] = top_frame.title[top_frame['title'].str.contains(name)].item()\n",
+    "        #matches_1.append(top_frame.title[top_frame['title'].str.contains(name)].item())\n",
+    "        i = i+1\n",
+    "        \n",
+    "    #if we have multiple possibilities, take exact match if it exists\n",
+    "    elif (top_frame['title'].str.contains(name).any()) \\\n",
+    "    and len(top_frame.title[top_frame['title'].str.contains(name)]) != 1\\\n",
+    "    and not top_frame.title[top_frame['title'] == name].empty:\n",
+    "        university_name[name] = top_frame.title[top_frame['title'] == name]\n",
+    "#Number of matches.\n",
+    "len(university_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Mostly the same but the other way around.\n",
+    "i = 0\n",
+    "\n",
+    "for name in top_frame['title']:\n",
+    "    if times_frame['name'].str.contains(name).any()\\\n",
+    "    and len(times_frame.name[times_frame['name'].str.contains(name)]) == 1:\n",
+    "        university_name[times_frame.name[times_frame['name'].str.contains(name)].item()] = name\n",
+    "        i = i+1\n",
+    "    elif (times_frame['name'].str.contains(name).any()) \\\n",
+    "    and len(times_frame.name[times_frame['name'].str.contains(name)]) != 1\\\n",
+    "    and not times_frame.name[times_frame['name'] == name].empty:\n",
+    "        university_name[times_frame.name[times_frame['name'] == name].item()] = name\n",
+    "#Number of matches.\n",
+    "len(university_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, we only have 148 matches, which leaves us with (at least) 52 unmatches universities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "times_frame['join_here'] = times_frame.name.map(university_name)\n",
+    "university_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Specific Cases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We decided to take a look at all the unmatched universities to see if we can do better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "still_na = times_frame[times_frame['join_here'].isnull()]\n",
+    "inv_unimap = {v: k for k, v in university_name.items()} #inverse dictionary\n",
+    "top_frame['join_here'] = top_frame.title.map(inv_unimap)\n",
+    "top_na = top_frame[top_frame['join_here'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We go through each country to check if there are any unmatched universities or if they exist in only one of the rankings. This will allow us to understand the difficulties in each one of them. We could use the aliases, but in reality, it does not match and treat them separately below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#This set gives us the set of countries for which both frames have unmatched universities\n",
+    "na_countries = set(top_na.groupby('country').size().index).intersection(set(still_na.groupby('country').size().index))\n",
+    "na_countries"
    ]
   },
   {
@@ -970,7 +1011,265 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: add rank? I don't think we need anything else, all other values are junk that won't be needed for question 4 and 5"
+    "def print_universities(country):\n",
+    "    print(country, \"\\n\")\n",
+    "    print(\"TopUniversities university names :\")\n",
+    "    print(top_na[top_na.country == country].title)\n",
+    "    print(\"\\nTimes Higher Education university names\")\n",
+    "    print(still_na[still_na.country == country].name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concerning Belgium, we have no possible matches between the 2 rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Belgium\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Canada, the main issue of merging is the language."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Canada\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once again in France, the only possible merges are prevented because of the language."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"France\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that matchings in Germany can be improved a lot because of naming conventions in Germany."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Germany\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This university always matches with 2 other universities (needs to be done manually)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Hong Kong\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only string that can be matched is not written in the same in both rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"South Korea\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once again, universities in Spain cannot be merged because of translation issues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Spain\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These universities are all distinct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"Sweden\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, in the United Kingdom, we have no possible matches between the universities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print_universities(\"United Kingdom\"\u001d",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We tried to match the universities using their number of students. However, we were unable to use this method because the difference between the number of students between the two rankings was too big.\n",
+    "\n",
+    "After this, we decided to match them manually by adding them to the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#times.name = top.title\n",
+    "university_name['universityofmontreal'] = 'universitedemontreal'\n",
+    "university_name['pierreandmariecurieuniversity'] = 'universitepierreetmariecurieupmc'\n",
+    "university_name['lmumunich'] = 'ludwigmaximiliansuniversitatmunchen'\n",
+    "university_name['humboldtuniversityofberlin'] = 'humboldtuniversitatzuberlin'\n",
+    "university_name['freeuniversityofberlin'] = 'freieuniversitaetberlin'\n",
+    "university_name['heidelberguniversity'] = 'ruprechtkarlsuniversitatheidelberg'\n",
+    "university_name['universityoftubingen'] = 'eberhardkarlsuniversitattubingen'\n",
+    "university_name['technicaluniversityofberlin'] = 'technischeuniversitatberlintuberlin'\n",
+    "university_name['universityoffreiburg'] = 'albertludwigsuniversitaetfreiburg'\n",
+    "university_name['universityofhongkong'] = 'theuniversityofhongkong'\n",
+    "university_name['koreaadvancedinstituteofscienceandtechnologykaist'] = 'kaistkoreaadvancedinstituteofsciencetechnology'\n",
+    "university_name['autonomousuniversityofbarcelona'] = 'universitautonomadebarcelona'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final merging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by adding a column to unable the merging of the two rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_frame['join_here'] = times_frame.name.map(university_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_top.name = merged_top.name.map(str.lower).map(ascii)\n",
+    "\n",
+    "merged_frame = pd.merge(times_frame, \n",
+    "                        merged_top, how='outer', left_on=['join_here'], right_on=['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_frame"
    ]
   },
   {
