Finished all exercises

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -315,26 +315,26 @@
     "#We create a file to store the TopUniversities Ranking\n",
     "top_file = DATA_FOLDER + 'top_ranking.pkl'\n",
     "if osp.exists(top_file):\n",
-    "    merged_top = load_pkl(top_file)\n",
+    "    top_frame = load_pkl(top_file)\n",
     "else:\n",
     "    missing_rows = pd.DataFrame()\n",
     "    for url in top_frame.url:\n",
     "        new_info = get_additional_info(url)\n",
     "        missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
     "    #We simply concatenate all the information and sort them in order to have a better layout similar to the one below\n",
-    "    merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
-    "    merged_top.rename(columns = {'title': 'name'}, inplace = True)\n",
-    "    merged_top = merged_top.reindex_axis(['country', 'region', 'name', 'score', 'relative_rank',\n",
+    "    top_frame = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
+    "    top_frame.rename(columns = {'title': 'name'}, inplace = True)\n",
+    "    top_frame = top_frame.reindex_axis(['country', 'region', 'name', 'score', 'relative_rank',\n",
     "                                         'absolute_rank', 'international faculty', 'faculty',\n",
     "                                         'international students', 'students', 'url'], axis=1)\n",
-    "    save_pkl(merged_top, top_file)"
+    "    save_pkl(top_frame, top_file)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have undefined values in the \"merged_top\" set due to the lack of information on the website, so we simply propagate NAN values."
+    "We have undefined values in the final \"top_frame\" set due to the lack of information on the website, so we simply propagate NAN values."
    ]
   },
   {
@@ -353,7 +353,7 @@
    },
    "outputs": [],
    "source": [
-    "top_fac_stud = merged_top\n",
+    "top_fac_stud = top_frame\n",
     "ratios_calc(top_fac_stud , 'faculty', 'students', 'faculty/students')\n",
     "top_fac_stud = top_fac_stud[['name', 'faculty/students', 'relative_rank']]"
    ]
@@ -386,7 +386,7 @@
    },
    "outputs": [],
    "source": [
-    "top_int_stud = merged_top\n",
+    "top_int_stud = top_frame\n",
     "ratios_calc(top_int_stud,'international students', 'students', 'international/students')\n",
     "top_int_stud = top_int_stud[['name', 'international/students', 'relative_rank']]"
    ]
@@ -459,7 +459,7 @@
    },
    "outputs": [],
    "source": [
-    "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
+    "best_countries = pd.DataFrame(top_frame['country'].value_counts())\n",
     "best_countries = best_countries.reset_index()\n",
     "best_countries.columns = ['country', 'universities']\n",
     "best_countries.head()"
@@ -480,7 +480,7 @@
    },
    "outputs": [],
    "source": [
-    "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
+    "best_regions = pd.DataFrame(top_frame['region'].value_counts())\n",
     "best_regions = best_regions.reset_index()\n",
     "best_regions.columns = ['region', 'universities']\n",
     "best_regions.head()"
@@ -509,7 +509,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -520,6 +521,17 @@
     "sns.barplot(y=\"region\", x=\"universities\", data=best_regions)\n",
     "plt.title(\"Regions according to number of top universities\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_frame"
    ]
   },
   {
@@ -833,6 +845,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_frame"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -873,8 +896,19 @@
     "    # transforms é with e for example\n",
     "    return ''.join((c for c in unicodedata.normalize('NFD', s) if unicodedata.category(c) != 'Mn'))\n",
     "\n",
-    "top_frame.title = top_frame.title.map(str.lower).map(ascii)\n",
+    "top_frame.name = top_frame.name.map(str.lower).map(ascii)\n",
     "times_frame.name = times_frame.name.map(str.lower).map(ascii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_frame"
    ]
   },
   {
@@ -896,18 +930,18 @@
     "university_name = dict()\n",
     "\n",
     "for name in times_frame['name']:\n",
-    "    if (top_frame['title'].str.contains(name).any()) \\\n",
-    "    and len(top_frame.title[top_frame['title'].str.contains(name)]) == 1:\n",
+    "    if (top_frame['name'].str.contains(name).any()) \\\n",
+    "    and len(top_frame.name[top_frame['name'].str.contains(name)]) == 1:\n",
     "        #way to check how many direct matches we have\n",
-    "        university_name[name] = top_frame.title[top_frame['title'].str.contains(name)].item()\n",
-    "        #matches_1.append(top_frame.title[top_frame['title'].str.contains(name)].item())\n",
+    "        university_name[name] = top_frame.name[top_frame['name'].str.contains(name)].item()\n",
+    "        #matches_1.append(top_frame.name[top_frame['name'].str.contains(name)].item())\n",
     "        i = i+1\n",
     "        \n",
     "    #if we have multiple possibilities, take exact match if it exists\n",
-    "    elif (top_frame['title'].str.contains(name).any()) \\\n",
-    "    and len(top_frame.title[top_frame['title'].str.contains(name)]) != 1\\\n",
-    "    and not top_frame.title[top_frame['title'] == name].empty:\n",
-    "        university_name[name] = top_frame.title[top_frame['title'] == name]\n",
+    "    elif (top_frame['name'].str.contains(name).any()) \\\n",
+    "    and len(top_frame.name[top_frame['name'].str.contains(name)]) != 1\\\n",
+    "    and not top_frame.name[top_frame['name'] == name].empty:\n",
+    "        university_name[name] = top_frame.name[top_frame['name'] == name]\n",
     "#Number of matches.\n",
     "len(university_name)"
    ]
@@ -923,7 +957,7 @@
     "# Mostly the same but the other way around.\n",
     "i = 0\n",
     "\n",
-    "for name in top_frame['title']:\n",
+    "for name in top_frame['name']:\n",
     "    if times_frame['name'].str.contains(name).any()\\\n",
     "    and len(times_frame.name[times_frame['name'].str.contains(name)]) == 1:\n",
     "        university_name[times_frame.name[times_frame['name'].str.contains(name)].item()] = name\n",
@@ -956,6 +990,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_frame"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -979,7 +1024,7 @@
    "source": [
     "still_na = times_frame[times_frame['join_here'].isnull()]\n",
     "inv_unimap = {v: k for k, v in university_name.items()} #inverse dictionary\n",
-    "top_frame['join_here'] = top_frame.title.map(inv_unimap)\n",
+    "top_frame['join_here'] = top_frame.name.map(inv_unimap)\n",
     "top_na = top_frame[top_frame['join_here'].isnull()]"
    ]
   },
@@ -1014,7 +1059,7 @@
     "def print_universities(country):\n",
     "    print(country, \"\\n\")\n",
     "    print(\"TopUniversities university names :\")\n",
-    "    print(top_na[top_na.country == country].title)\n",
+    "    print(top_na[top_na.country == country].name)\n",
     "    print(\"\\nTimes Higher Education university names\")\n",
     "    print(still_na[still_na.country == country].name)"
    ]
@@ -1207,7 +1252,7 @@
    },
    "outputs": [],
    "source": [
-    "#times.name = top.title\n",
+    "#times.name = top.name\n",
     "university_name['universityofmontreal'] = 'universitedemontreal'\n",
     "university_name['pierreandmariecurieuniversity'] = 'universitepierreetmariecurieupmc'\n",
     "university_name['lmumunich'] = 'ludwigmaximiliansuniversitatmunchen'\n",
@@ -1220,6 +1265,17 @@
     "university_name['universityofhongkong'] = 'theuniversityofhongkong'\n",
     "university_name['koreaadvancedinstituteofscienceandtechnologykaist'] = 'kaistkoreaadvancedinstituteofsciencetechnology'\n",
     "university_name['autonomousuniversityofbarcelona'] = 'universitautonomadebarcelona'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "times_frame"
    ]
   },
   {
@@ -1240,35 +1296,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "times_frame['join_here'] = times_frame.name.map(university_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "merged_top.name = merged_top.name.map(str.lower).map(ascii)\n",
-    "\n",
-    "merged_frame = pd.merge(times_frame, \n",
-    "                        merged_top, how='outer', left_on=['join_here'], right_on=['name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "times_frame['join_here'] = times_frame.name.map(university_name)\n",
+    "merged_frame = pd.merge(times_frame, top_frame, how='inner', left_on=['join_here'], right_on=['name'])\n",
     "merged_frame"
    ]
   },
@@ -1283,7 +1316,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Individual correlation\n",
+    "\n",
+    "The first step of our exploratory analysis was to look at each ranking individually to get a feel of the data. This step is important because when we will study the cross correlation between the 2 rankings, we won't be able to look at all the data (all the NaN values were removed when we merged our tables)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We started with the TopUniversities ranking. It is very easy to see that the number of faculty members per student and the percentage of international students were correlated with the relative ranking given by the website. However, we see that these two ratios are very poorly associated to each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "top_inner_corr = top_frame[['relative_rank', 'faculty/students', 'international/students']]\n",
+    "top_inner_corr = top_inner_corr.corr()\n",
+    "top_inner_corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concerning the Times Higher Education ranking, we notice different trends. Both ratios are very poorly correlated with the relative ranking. Moreover, we can assume that they are not correlated at all when looking at the numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "times_inner_corr = times_frame[['relative_rank', 'faculty/students', 'international/students']]\n",
+    "times_inner_corr = times_inner_corr.corr()\n",
+    "times_inner_corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When comparing both rankings independently, we can see that the Times Higher Education ranking does not rely as much on the number of faculty members per student and on the percentage of international students of a university to decide which university is better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correlation matrix offers very clear insights on the links between both rankings:\n",
+    "- The relative ranks of both rankings are strongly correlated (but far from perfectly aligned).\n",
+    "- The ratios are also strongly correlated but the fact that they are not equal to 1 signals discrepancies between both rankings (the provided numbers are clearly different)\n",
+    "\n",
+    "When looking more closely, we can find even more insights on each ranking alone :\n",
+    "- The correlation between the TopUniversities ranking and both ratios is a lot smaller when looking at the universities present in both ranking.  \n",
+    "- On the other hand, the Times Higher Education ranking is a lot more correlated to its ratios.\n",
+    "\n",
+    "From these numbers, we can thus see that it is very complicated (and often misleading) to compare 2 rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "cross_corr = merged_frame[['relative_rank_x', 'faculty/students_x', 'international/students_x', \n",
+    "                                  'relative_rank_y', 'faculty/students_y', 'international/students_y']]\n",
+    "cross_corr = cross_corr.corr()\n",
+    "cross_corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To quickly get a feel of the results, we decided to visualize them using a simple diagonal correlation matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Keep only bottom triangle\n",
+    "mask = np.zeros_like(corr, dtype=np.bool)\n",
+    "mask[np.triu_indices_from(mask)] = True\n",
+    "\n",
+    "# Set up the matplotlib figure\n",
+    "f, ax = plt.subplots(figsize=(11, 9))\n",
+    "\n",
+    "# Generate a custom diverging colormap\n",
+    "cmap = sns.diverging_palette(220, 10, as_cmap=True)\n",
+    "\n",
+    "# Draw the heatmap with the mask and correct aspect ratio\n",
+    "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
+    "    square=True, linewidths=.5, cbar_kws={\"shrink\": .5})\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 5 : Best Universities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get the best university considering both rankings, we will create a new dataframe using the merged one using the name (both of them as we have NaB cases for universities that are only in one or the other frame) and both rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_uni = merged_frame[['name_x', 'name_y', 'relative_rank_x', 'relative_rank_y']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we need to add two columns. The first one will be a mean of both ranks, and the second the \"distance\" between both ranks. This is because if we have a mean of 3.5, it could be because the ranks are 5 and 2, but also because the rank could be 4 and 3. Thus, the university could be considered \"better\" if the distance between both ranks is smaller.\n",
+    "\n",
+    "Note also that in the case of having only one of the ranks, we will have NaN in both columns. This is okay, as we will consider the university to not be \"good enough\", and thus not in the best. Also, the distance between the two rankings would be infinite and thus NaN is the most correct value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calc_mean(c1, c2):\n",
+    "    return (c1 + c2) / 2\n",
+    "    \n",
+    "def calc_distance(c1, c2):\n",
+    "    return abs(c1 - c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_uni['rank_mean'] = best_uni.apply(lambda row:  calc_mean(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
+    "best_uni['rank_dist'] =  best_uni.apply(lambda row:  calc_distance(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
+    "best_uni.sort_values(['rank_mean', 'rank_dist'], ascending=[True, True])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, as we can see, the best university considering both rankings would be Stanford University.\n",
+    "\n",
+    "Note that the two universities that were first on one of the lists are still in the top 5. Oxford University is in fifth place while Massachusetts Institute of Tecnology (MIT) is in second. This is true for most of the universities that are in the top 5 as they were in the top 5 of both lists."
    ]
   }
  ],
